edit feedback table in admin

--- a/admin/tester.html
+++ b/admin/tester.html
@@ -95,7 +95,7 @@
                                   <tr>
                                     <th scope="col">Visitor Name</th>
                                     <th scope="col" class="text-end">Rating</th>
-                                    <th scope="col" class="text-end">Suggestion</th>
+                                    <th scope="col" class="text-end">Feedback/Suggestion</th>
                                   </tr>
                                 </thead>
                                 <tbody>
@@ -104,49 +104,49 @@
                                       Adlei Vic Lao-e
                                     </th>
                                     <td class="text-end">Excellent</td>
-                                    <td class="text-end">None</td>
+                                    <td class="text-end">I tried accessing the website on my phone, and some elements are overlapping. It would be great if the layout adjusted more smoothly on smaller screens.</td>
                                   </tr>
                                   <tr>
                                     <th scope="row">
                                       Andrei Gail Lumbas
                                     </th>
                                     <td class="text-end">Bad</td>
-                                    <td class="text-end">Wdsfasdf</td>
+                                    <td class="text-end">The layout is clean and professional, but navigating through different exhibits is a bit slow. Could you add shortcuts or quick links to popular sections?</td>
                                   </tr>
                                   <tr>
                                     <th scope="row">
                                       Trisha Denise Garas
                                     </th>
                                     <td class="text-end">Bad</td>
-                                    <td class="text-end">sadfasd</td>
+                                    <td class="text-end">I found the exhibits section informative, but it would be great to have more detailed descriptions or stories behind each artifact.</td>
                                   </tr>
                                   <tr>
                                     <th scope="row">
                                       Jieben Kayla Abaya
                                     </th>
                                     <td class="text-end">Good</td>
-                                    <td class="text-end">asdfsadf</td>
+                                    <td class="text-end">I noticed the text size is a bit small for some people. It would be nice to have an option to adjust text size for easier reading.</td>
                                   </tr>
                                   <tr>
                                     <th scope="row">
                                       Paula Birtanny Laban
                                     </th>
-                                    <td class="text-end">Bad</td>
-                                    <td class="text-end">sdfszf</td>
+                                    <td class="text-end">Good</td>
+                                    <td class="text-end">It would be nice to have a map of the museum floorplan available for download or in an interactive format.</td>
                                   </tr>
                                   <tr>
                                     <th scope="row">
                                       Valiant Mi-ing
                                     </th>
-                                    <td class="text-end">Bad</td>
-                                    <td class="text-end">asdsdfa</td>
+                                    <td class="text-end">Good</td>
+                                    <td class="text-end">Including visitor reviews and recommendations about their favorite exhibits would make the website feel more community-oriented.</td>
                                   </tr>
                                   <tr>
                                     <th scope="row">
                                       Kenshin Ram Ayan
                                     </th>
-                                    <td class="text-end">Bad</td>
-                                    <td class="text-end">fsdasdfasdf</td>
+                                    <td class="text-end">Excellent</td>
+                                    <td class="text-end">It would be great if you could offer descriptions of artifacts in multiple languages for international visitors.</td>
                                   </tr>
                                 </tbody>
                               </table>
